--- a/src/css/LatestNews.module.css
+++ b/src/css/LatestNews.module.css
@@ -113,7 +113,8 @@
         width: 35%;
     }
     .newsCards {
-        width: 20%;
+        width: 45%;
+        margin: 40px 1rem 40px 1rem;
     }
 }
 
