--- a/src/css/LatestNews.module.css
+++ b/src/css/LatestNews.module.css
@@ -1,31 +1,17 @@
-/*
-.titleCaption {
-    font-size: 20px;
-    color: black;
-    font-weight: bold;
-    margin-left: 8%;
-
-} */
 
 .newsCardsContainer {
     display: flex;
     flex-flow: row wrap;
-    /* justify-content: flex-start; */
 
   text-align: left;
-    /* margin: 30px 0 30px 0; */
 
 }
 
 .newsDate {
     color: #999;
+   margin: 1rem 0 1rem 1.7rem;
+    text-align: left;
 }
-
-/* .newsOverViewContent {
-    text-align: center;
-    width: 15%;
-    padding: 2rem;
-} */
 
 .newsCards {
     background: #ffffff;
@@ -33,7 +19,10 @@
     box-shadow: 0px 17px 35px rgb(74 74 115 / 10%), 0px 5px 15px rgb(0 0 0 / 7%);
     /* width: 20%; */
     border-radius: 2px;
+}
 
+.newsCards:hover {
+    cursor: pointer;
 }
 
 
@@ -53,26 +42,27 @@
 
 .newsCardTitle {
      margin-top: 40px;
-    font-size: 20px;
+    font-size: 18px;
+}
+
+.newsCardTitle > a {
+    text-decoration: none;
+    color: #222;
+}
+
+.newsCardTitle > a:hover {
+color: #db2531;
 }
 
 .newsCardTitleContainer {
-    /* margin: 1rem 0 1rem 0; */
+
     text-align: left;
-    /* padding: 1rem; */
+
     margin: 1rem 2rem 0 2rem;
     width: 70%;
     font-size: 18px;
 }
-/*
-.newsCardDescContainer {
-    color: #666677;
-    line-height: 1.75;
-    margin: 0 1rem 0 1rem;
-    font-size: 14px;
-}
 
- */
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
