--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -15,38 +15,21 @@ body{
 .row{
 	display: flex;
 	flex-wrap: wrap;
+
 }
 ul{
 	list-style: none;
 }
 .footer{
-	/* background-color: #24262b; */
-    /* padding: 70px 0; */
+
     padding: 3rem;
     padding-bottom: 3rem;
 }
 .footerCol{
    width: 25%;
-   /* padding: 0 15px; */
+
 }
-/* .footerCol h4{
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
-} */
-/* .footerCol h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: #e91e63;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
-} */
+
 .footerCol ul li:not(:last-child){
 	margin-bottom: 10px;
 }
@@ -60,27 +43,22 @@ ul{
 	display: block;
 	transition: all 0.3s ease;
 }
-/* .footerCol ul li a:hover{
 
-	padding-left: 8px;
-} */
 .footerCol .socialLinks a{
 	display: inline-block;
 	height: 40px;
 	width: 40px;
     color: #555;
-	/* background-color: rgba(255,255,255,0.2); */
+
 	margin:1rem 3px 3px 0;
 	text-align: center;
-	/* line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff; */
+
 	transition: all 0.5s ease;
     font-size: 22px;
 }
 .footerCol .socialLinks a:hover{
 	color: #db2531;
-	/* background-color: #ffffff; */
+
 }
 
 .footerTitle {
@@ -161,6 +139,36 @@ ul{
 @media(max-width: 574px){
   .footerCol{
     width: 100%;
+}
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .row {
+        margin: 0 7rem 0 7rem;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+.row {
+    margin: 0 7rem 0 7rem;
 }
 }
 
